# FamilyCam-On-Demand-Home-Monitor

./: .gitignore  README.md
deploy/systemd/: README.md  familycam-go-pion.service  familycam-main-app.service  familycam-webrtc-rs.service
docs/: DATAFLOW.md
docs/diagrams/: main-app-dataflow.dot  webrtc-poc-dataflow.dot
projects/beta-android-viewer/: .gitignore  LIBRARY_RESEARCH.md  README.md  settings.gradle.kts
projects/beta-android-viewer/app/: build.gradle.kts
projects/beta-go-pion/: .env.example  README.md  go.mod  go.sum  main.go
projects/beta-webrtc-rs/: README.md
projects/beta-webrtc-rs/webrtc-rs-poc/: .env.example  Cargo.toml
projects/main-app/: .env.example  Cargo.toml  IMPLEMENTATION.md  README.md
projects/main-app/deploy/: README.md  familycam.service
projects/main-app/src/: app_state.rs  main.rs
projects/main-app/src/camera/: discovery.rs  ffmpeg_backend.rs  jpeg.rs  mod.rs  service.rs  traits.rs
projects/main-app/src/config/: mod.rs
projects/main-app/src/core/: errors.rs  state.rs
projects/main-app/src/notify/: telegram.rs
projects/main-app/src/web/: handlers.rs  middleware.rs  routes.rs
projects/main-app/static/: bulma.min.css  index.html
projects/prototypes/: README.md
projects/prototypes/go-pion-poc/: .gitignore  README.md  main.go
projects/webrtc-experiment/: README.md
projects/webrtc-experiment/webrtc-rs-poc/: .env.example  Cargo.toml  README.md
projects/webrtc-experiment/webrtc-rs-poc/src/: main.rs
scripts/: benchmark-webrtc-rs.sh  check-camera.sh  control-webrtc-rs.sh
(+15 files in other folders)
