[package]
name = "familycam-webrtc-rs-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
bytes = "1"
dotenvy = "0.15"
interceptor = "0.13"
rtp = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
util = { package = "webrtc-util", version = "0.10", features = ["marshal"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
webrtc = "0.12"
